
[tool.poetry]
name = "pyrql"
version = "0.7.8"
description = "RQL parsing"
authors = ["Pedro Werneck <pjwerneck@gmail.com>"]
license = "MIT"
repository = "https://github.com/pjwerneck/pyrql"

[tool.poetry.dependencies]
python = "^3.8"
pyparsing = ">=2.4"
python-dateutil = "^2.8"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
force_single_line = "True"
line_length = 99

[tool.pytest.ini_options]
pythonpath = [
  "."
]
