[project]
name = "pyrql"
version = "0.7.9"
description = "RQL parsing"
authors = [{ name = "Pedro Werneck", email = "pjwerneck@gmail.com" }]
requires-python = "~=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
    "pyparsing~=3.1",
    "python-dateutil~=2.8",
]

[project.urls]
Repository = "https://github.com/pjwerneck/pyrql"
"Bug Tracker" = "https://github.com/pjwerneck/pyrql/issues"

[dependency-groups]
dev = [
    "pytest>=7.2.1",
    "hypothesis>=6.92.1,<7",
    "rust>=1.3.1",
    "pytest-profiling>=1.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [".git", ".venv"]
line-length = 99
target-version = "py312"
extend-exclude = ["neuropad/core/**"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
force-single-line = true


[tool.pytest.ini_options]
pythonpath = [
  "."
]


[tool.hatch.build]
include = [
  "pyrql/*.py",
]
exclude = [
  "tests/**",
]

[tool.hatch.build.targets.sdist]
exclude = ["tests", ".*"]
only_packages = true

[tool.hatch.build.targets.wheel]
exclude = ["tests", ".*"]
only_packages = true
packages = ["pyrql"]
